# q1x

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  b2c.py  main.cpp  vcpkg.json
cmake/: api-config.cmake.in  base.cmake  compile_options.cmake  git_tag_info.cmake  network.cmake  q1x-config.cmake.in  spdlog.cmake
include/: api.h
include/api/: affinity.h  algo.h  base.h  buffer.h  config.h.in  except.h  feature_detection.h  format.h  formula.h  iconv.h  logger.h  mmap.h  numerics.h  object.h  runtime.h  std.h  strings.h  time.h  util.h
include/api-third-party/cista/: memory_holder.h
include/api-third-party/xtensor/misc/: xsort.hpp
include/api/base/: cache1d.h  once.h  scheduler.h
include/api/dataframe/: dataframe.h  ewm.h  series.h
include/api/encoding/: csv.h  json.h  yaml.h
include/api/io/: README.md  csv-writer.h  file.h  http.h
include/api/net/: base.h  connection_pool.h  endpoint.h  operation_handler.h
include/api/test/: test.h
include/q1x/: adapter.h  cache.h  command.h  datasets.h  exchange.h  formula.h  quant1x.h
include/q1x/backtest/: backtest.h  order.h  position.h  trade.h
include/q1x/config/: price_cage.h  rule-parameter.h  strategy-parameter.h  trader-parameter.h  trading-session.h
include/q1x/dataframe/: dataframe.h  ewm.h  periods.h  series.h
include/q1x/datasets/: base.h  chips.h  kline.h  kline_raw.h  minute.h  trans.h  xdxr.h  xdxr_adjust_factor.h  xdxr_formula.md
include/q1x/encoding/: csv.h  iconv.h  json.h  yaml.h
include/q1x/engine/: action.h  rule-context.h  rule-engine.h  strategy.h
include/q1x/exchange/: blocks.h  calendar.h  code.h  margin-trading.h  security.h  session.h
include/q1x/factors/: base.h  f10.h  financial_report.h  history.h  notice.h  safety-score.h  share-holder.h
include/q1x/io/: csv-writer.h  file.h  http.h  logger.h
include/q1x/level1/: block_info.h  block_meta.h  client.h  company_category.h  company_content.h  encoding.h  finance_info.h  heartbeat.h  hello1.h  hello2.h  index_bars.h  minute_time.h  protocol.h  security_bars.h  security_count.h  security_list.h  security_quote.h  server.h  transaction_data.h  transaction_history.h  xdxr_info.h
include/q1x/models/: plugin-api.h  plugin-loader.h
include/q1x/net/: base.h  connection_pool.h  endpoint.h  operation_handler.h
include/q1x/proto/: README.md  chips.pb.cc  chips.pb.h  data.h  data.pb.cc  data.pb.h  kline.pb.cc  kline.pb.h  snapshot.capnp.c++  snapshot.capnp.h  trans.pb.cc  trans.pb.h  xdxr.pb.cc  xdxr.pb.h
include/q1x/realtime/: snapshot.h
include/q1x/resources/: README.md
include/q1x/resources/meta/: blocks.h  tdxhy.inc  tdxzs.inc  tdxzs3.inc
include/q1x/runtime/: cache1d.h  config.h  core.h  crash.h  once.h  service.h
include/q1x/std/: affinity.h  algo.h  api.h  base.h  buffer.h  except.h  feature_detection.h  mmap.h  numerics.h  object.h  safe.h  scheduler.h  simd.h  strings.h  time.h  util.h
include/q1x/strategies/: rule-error.h  strategy.h
include/q1x/ta/: README.md  boll.h  ema.h  ma.h  macd.h  rolling.h  rolling_window.h  rsi.h  simd.h  sma.h  ta.h  trend.h  type_default.h  wave.h
include/q1x/test/: test.h
include/q1x/trader/: account.h  constants.h  fee.h  holding.h  order.h  order_cache.h  order_state.h  position.h  tracker.h  trader.h
proto/: chips.proto  data.proto  kline.proto  snapshot.capnp  test-snapshot.py  trans.proto  xdxr.proto
resources/meta/: tdxhy.cfg  tdxzs.cfg  tdxzs3.cfg
src/: api.cpp
src/api/: affinity.cpp  api.cpp  iconv.cpp  logger.cpp  numerics.cpp  runtime.cpp  strings.cpp  time.cpp  util.cpp
src/api/crash/: handler.cpp
src/api/encoding/: json.cpp
src/api/io/: file.cpp  http.cpp
src/api/os/: daemon_macosx.cpp  daemon_systemd.cpp  service.cpp
src/q1x/: cache.cpp  command.cpp  datasets.cpp  exchange.cpp  formula.cpp  quant1x.cpp
src/q1x/backtest/: backtest.cpp  engine.cpp  order.cpp  position.cpp  trade.cpp
src/q1x/config/: config.cpp
src/q1x/config/detail/: strategy-parameter.cpp  trader-parameter.cpp  trading-session.cpp
src/q1x/datasets/: chips.cpp  kline_raw.cpp  klines.cpp  minute.cpp  trans.cpp  xdxr.cpp  xdxr_adjust_factor.cpp
src/q1x/encoding/: iconv.cpp  json.cpp
src/q1x/engine/: adapter.cpp  rule-engine.cpp  strategy.cpp
src/q1x/exchange/: blocks.cpp  calendar.cpp  code.cpp  margin-trading.cpp  security.cpp  session.cpp  timestamp.cpp
src/q1x/factors/: base.cpp  f10.cpp  financial_report.cpp  history.cpp  notice.cpp  safety-score.cpp  share-holder.cpp
src/q1x/io/: file.cpp  http.cpp
src/q1x/level1/: client.cpp  protocol.cpp  server.cpp
src/q1x/plugins/: plugin-loader.cpp
src/q1x/realtime/: snapshot.cpp
src/q1x/runtime/: core.cpp  crash.cpp  daemon_macosx.cpp  daemon_service.cpp  daemon_systemd.cpp
src/q1x/std/: affinity.cpp  numerics.cpp  safe.cpp  scheduler.cpp  simd.cpp  strings.cpp  time.cpp  util.cpp
src/q1x/strategies/: rule-engine.cpp  strategy.cpp
src/q1x/ta/: trend.cpp  wave.cpp
src/q1x/trader/: account.cpp  fee.cpp  holding.cpp  order.cpp  order_cache.cpp  order_state.cpp  position.cpp  tracker.cpp  trader.cpp
tests/: CMakeLists.txt  crash-linux.cpp  crash-windows.cpp  sina.js  tdd-calendar.cpp  tdd-chips.cpp  tdd-cron.cpp  tdd-error.cpp  tdd-filelock.cpp  tdd-formula.cpp  tdd-homedir.cpp  tdd-http.cpp  tdd-iconv.cpp  tdd-level1-detect-server.cpp  tdd-linear-regression.cpp  tdd-margin-trading.cpp  tdd-notices.cpp  tdd-number-range.cpp  tdd-patterns-wave-release.cpp  tdd-peaks.cpp  tdd-rolling.cpp  tdd-safety-score.cpp  tdd-session.cpp  tdd-times.cpp  tdd-timestamp.cpp  tdd-touch.cpp  test-calender.cpp  test-crash.cpp
